feat(keyboard_manager): option to use alt as meta on macOS
See https://github.com/Kethku/neovide/issues/445#issuecomment-872264442

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = ["neovide-derive"]
 [features]
 default = []
 embed-fonts = []
+alt-as-meta = []
 
 [dependencies]
 neovide-derive = { path = "neovide-derive" }
